<resources>
    <string name="app_name">PicsHouse</string>

    <!--camera related-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_notify">Notification</string>

    <!--camera and edit photo-->
    <string name="filter_image_desc">Picture from camera</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_filter">Edit Photo</string>
    <string name="action_nextstep">Next</string>
    <string name="action_publish">Publish</string>
    <string name="title_activity_publish">Share To</string>
    <string name="input_addtext">Say Something...</string>
    <string name="publish_share_text">Share</string>
    <string name="comment_time">2 hours ago</string>

    <!--login and signup-->
    <string name="title_activity_login">Login</string>
    <string name="add_profile_pic">Add profile picture</string>
    <string name="username">Username</string>
    <string name="username2">username</string>
    <string name="password">Password</string>
    <string name="password2">password</string>
    <string name="re_password">Re-Password</string>
    <string name="re_password2">password verify</string>
    <string name="email">Email</string>
    <string name="email2">email</string>
    <string name="gender">Gender</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="facebook_login">Log in with Facebook</string>
    <string name="forget_password">Forgot Password</string>

    <string name="facebook_app_id">821745201206709</string>
    <string name="facebook_app_id_test">1036438616383973</string>

    <string name="warn_password_empty">Please input password</string>
    <string name="warn_password2_empty">Please input password for verify</string>
    <string name="password_verify_no_match">Password verify failed</string>


    <string name="http_response_syntax_error">Syntax Error</string>
    <string name="http_response_auth_error">Please login first</string>
    <string name="http_response_login_fail">Incorrect username or password</string>
    <string name="http_response_error">Server Error</string>


    <!--for 'user' tab-->
    <string name="Xiangyi">Xiangyi</string>
    <string name="Xie">Xie</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="followers">Follower</string>
    <string name="following">Following</string>
    <string name="posts">Posts</string>

    <!--comment-->
    <string name="frag_comment_edittext_hint">Add a comment</string>
    <string name="frag_comment_edittext_action">Send</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
