<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/signup_background_color">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:layout_height="30dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="@string/password"
            android:textColor= "@color/black">
        </TextView>

        <EditText
            android:id="@+id/signup_pwd"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:hint="@string/password2"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:singleLine="true"
            android:maxLength="15"
            android:ems="10"
            android:textColor="@color/black"
            android:background="@null">
            <requestFocus />
        </EditText>
    </LinearLayout>



    <View android:background="@color/light_notes_color"
        android:layout_height="1dp"
        android:layout_width="fill_parent"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:layout_height="30dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="@string/password"
            android:textColor= "@color/black">
        </TextView>

        <EditText
            android:id="@+id/signup_pwd_verify"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:hint="@string/re_password2"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:singleLine="true"
            android:maxLength="15"
            android:ems="10"
            android:textColor="@color/black"
            android:background="@null">
            <requestFocus />
        </EditText>
    </LinearLayout>



    <View android:background="@color/light_notes_color"
        android:layout_height="1dp"
        android:layout_width="fill_parent"/>

</LinearLayout>
