<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xiangyixie.picshouse.activity.PublishActivity">


    <!--
    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_activity_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/publish_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways" />
    </android.support.design.widget.AppBarLayout>
    -->

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:clickable="false"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <ImageView
                android:id="@+id/Edited_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/filter_image_desc"
                android:scaleType="fitXY"
                android:src="@drawable/img5" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="5">

            <EditText
                android:id="@+id/InputText_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="3dp"
                android:background="@drawable/inputtextview_shape"
                android:gravity="top"
                android:hint="@string/input_addtext"
                android:inputType="textMultiLine"
                android:maxLength="500"
                android:singleLine="false"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/light_notes_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/publish_share_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/light_notes_color" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <GridView
                android:id="@+id/gridView_share"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="@color/transparent_background"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:numColumns="2"
                android:paddingTop="15dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="2dp"></GridView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>


